src/test/ui/parser/issue-2354-1.rs
static foo: isize = 2; } //~ ERROR unexpected close delimiter:
